; ModuleID = '/home/carl/AnghaBench/mimikatz/mimilib/extr_utils.c_klog_sid.c'
source_filename = "/home/carl/AnghaBench/mimikatz/mimilib/extr_utils.c_klog_sid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [3 x i32] [i32 37, i32 115, i32 0], align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @klog_sid(i32* %0, i64 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load i64, i64* %4, align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %18

8:                                                ; preds = %2
  %9 = load i64, i64* %4, align 8
  %10 = call i64 @ConvertSidToStringSid(i64 %9, i32* %5)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %18

12:                                               ; preds = %8
  %13 = load i32*, i32** %3, align 8
  %14 = load i32, i32* %5, align 4
  %15 = call i32 @klog(i32* %13, i8* bitcast ([3 x i32]* @.str to i8*), i32 %14)
  %16 = load i32, i32* %5, align 4
  %17 = call i32 @LocalFree(i32 %16)
  br label %18

18:                                               ; preds = %12, %8, %2
  ret void
}

declare dso_local i64 @ConvertSidToStringSid(i64, i32*) #1

declare dso_local i32 @klog(i32*, i8*, i32) #1

declare dso_local i32 @LocalFree(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
